turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:26: error: ')' expected but ';' found.
  state = rule(state)(couleurActuelle)(2);
                                         ^